[gd_scene load_steps=21 format=3 uid="uid://bnam37bm74i28"]

[ext_resource type="Script" path="res://main.gd" id="1_18tvc"]
[ext_resource type="Texture2D" uid="uid://ds2owxj5pwgdl" path="res://Material Duck Hunt/cenariotras.png" id="1_gyw3e"]
[ext_resource type="Texture2D" uid="uid://nb7lakwnvwmu" path="res://Material Duck Hunt/cenariofrente.png" id="2_whqny"]
[ext_resource type="PackedScene" uid="uid://b7anuxmxp73gm" path="res://alvo.tscn" id="5_ct1jl"]
[ext_resource type="PackedScene" uid="uid://c105gcv6fr01o" path="res://topo.tscn" id="5_okn0t"]
[ext_resource type="PackedScene" uid="uid://bleausbjk8qay" path="res://chao.tscn" id="6_pltnx"]
[ext_resource type="Texture2D" uid="uid://ds4weubqm7ys7" path="res://Material Duck Hunt/cao/captura.png" id="7_irfxs"]
[ext_resource type="Texture2D" uid="uid://c7stogiucv6g3" path="res://Material Duck Hunt/cao/rindo.png" id="8_nt7vq"]
[ext_resource type="Texture2D" uid="uid://30c78ww306x1" path="res://Material Duck Hunt/hud.png" id="9_btot2"]
[ext_resource type="FontFile" uid="uid://bpnfc6xmhhh5a" path="res://Material Duck Hunt/PressStart2P.ttf" id="10_wl2kc"]
[ext_resource type="AudioStream" uid="uid://bf4w5w1ybmrx3" path="res://Material Duck Hunt/sons/cao_captura.wav" id="11_ekixb"]
[ext_resource type="AudioStream" uid="uid://co6q56xmjyngt" path="res://Material Duck Hunt/sons/cao_rindo.wav" id="12_sknlc"]
[ext_resource type="AudioStream" uid="uid://brdbo4wr2dl0w" path="res://Material Duck Hunt/sons/colidiu.wav" id="13_ulsuo"]
[ext_resource type="AudioStream" uid="uid://dnw81nihab8og" path="res://Material Duck Hunt/sons/flyaway.wav" id="14_ir302"]
[ext_resource type="AudioStream" uid="uid://cwqpjmnhubosn" path="res://Material Duck Hunt/sons/round.wav" id="15_qimfl"]

[sub_resource type="Animation" id="Animation_wiq3f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("captura:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(410, 577)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rindo:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(410, 577)]
}

[sub_resource type="Animation" id="Animation_hgg0i"]
resource_name = "capturado"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("captura:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7, 1.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(410, 577), Vector2(410, 531), Vector2(410, 451), Vector2(410, 513), Vector2(414, 568)]
}

[sub_resource type="Animation" id="Animation_6lr3h"]
resource_name = "rindo"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rindo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(410, 577), Vector2(410, 495), Vector2(410, 445), Vector2(410, 495), Vector2(411, 575)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ghi06"]
_data = {
"RESET": SubResource("Animation_wiq3f"),
"capturado": SubResource("Animation_hgg0i"),
"rindo": SubResource("Animation_6lr3h")
}

[sub_resource type="FontVariation" id="FontVariation_6o2m4"]
base_font = ExtResource("10_wl2kc")

[node name="main" type="Node2D"]
script = ExtResource("1_18tvc")

[node name="tras" type="Sprite2D" parent="."]
z_index = -3
texture = ExtResource("1_gyw3e")
centered = false

[node name="frente" type="Sprite2D" parent="."]
z_index = 1
texture = ExtResource("2_whqny")
centered = false

[node name="alvo" parent="." instance=ExtResource("5_ct1jl")]
position = Vector2(338, 393)
scale = Vector2(0.48, 0.48)

[node name="gerarpato" type="Timer" parent="."]
one_shot = true

[node name="espera" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="captura" type="Sprite2D" parent="."]
position = Vector2(410, 577)
scale = Vector2(0.920398, 1.34028)
texture = ExtResource("7_irfxs")

[node name="rindo" type="Sprite2D" parent="."]
position = Vector2(410, 577)
texture = ExtResource("8_nt7vq")

[node name="chao" parent="." instance=ExtResource("6_pltnx")]
position = Vector2(385, 765)

[node name="topo" parent="." instance=ExtResource("5_okn0t")]
position = Vector2(374, -73)

[node name="cao" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ghi06")
}

[node name="Hud" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Hud"]
position = Vector2(400, 625)
scale = Vector2(1.4023, 1)
texture = ExtResource("9_btot2")

[node name="Label" type="Label" parent="Hud"]
offset_left = 349.0
offset_top = 603.0
offset_right = 454.0
offset_bottom = 648.0
theme_override_fonts/font = SubResource("FontVariation_6o2m4")
text = "000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cao_captura" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("11_ekixb")

[node name="cao_rindo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_sknlc")

[node name="colidiu" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_ulsuo")

[node name="flayaway" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_ir302")

[node name="novo_turno" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_qimfl")

[connection signal="timeout" from="gerarpato" to="." method="_on_gerarpato_timeout"]
[connection signal="timeout" from="espera" to="." method="_on_espera_timeout"]
[connection signal="body_entered" from="chao" to="." method="_on_chao_body_entered"]
[connection signal="body_entered" from="topo" to="." method="_on_topo_body_entered"]
